--- a/public/index.html
+++ b/public/index.html
@@ -37,6 +37,8 @@
     <link rel="preload" href="%PUBLIC_URL%/static/css/main.b8ee0e11.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <noscript><link rel="stylesheet" href="%PUBLIC_URL%/static/css/main.b8ee0e11.css"></noscript>
 </head>
+<link rel="preload" href="https://fonts.gstatic.com/s/redhatdisplay/v19/8vIQ7wUr0m80wwYf0QCXZzYzUoTg_T6h.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+<link rel="preload" href="https://fonts.gstatic.com/s/opensans/v40/memvYaGs126MiZpBA-UvWbX2vVnXBbObj2OVTS-muw.woff2" as="font" type="font/woff2" crossorigin="anonymous">
 
 
     <link
@@ -102,14 +104,7 @@
         rel="stylesheet"
         href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       />
-      <!-- <link
-        rel="stylesheet"
-        href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
-      /> -->
-      <!-- <link
-        rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-      /> -->
+
       <link
         rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
@@ -120,6 +115,8 @@
       />
     </noscript>
 
+   
+  <link rel="stylesheet" href="styles.css" media="print" onload="this.media='all'">
     <title>
       Property India Online | Property For sale online | kalsiEstate
     </title>
