--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,8 @@
 <link rel="preload" href="https://fonts.gstatic.com/s/redhatdisplay/v19/8vIQ7wUr0m80wwYf0QCXZzYzUoTg_T6h.woff2" as="font" type="font/woff2" crossorigin="anonymous">
 <link rel="preload" href="https://fonts.gstatic.com/s/opensans/v40/memvYaGs126MiZpBA-UvWbX2vVnXBbObj2OVTS-muw.woff2" as="font" type="font/woff2" crossorigin="anonymous">
 
-
+<link rel="preload" href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:ital,wght@0,300..900&display=swap" as="style" crossorigin="anonymous">
+<link rel="preload" href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800&display=swap" as="style" crossorigin="anonymous">
     <link
       rel="preload"
       href="https://kalsiestate.com/static/media/slick.295183786cd8a1389865.woff"
@@ -78,13 +79,9 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
-    <!-- <link
-      rel="preload"
-      href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
-      as="style"
-      onload="this.onload=null;this.rel='stylesheet'"
-    /> -->
+   
 
+    <link rel="preload" as="image" href="https://d3v1h55v8tucsz.cloudfront.net/public/Admin/HomepageBanner/1726986444.webp"/>
     <link
       rel="preload"
       href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
@@ -116,7 +113,6 @@
     </noscript>
 
    
-  <link rel="stylesheet" href="styles.css" media="print" onload="this.media='all'">
     <title>
       Property India Online | Property For sale online | kalsiEstate
     </title>
@@ -129,16 +125,7 @@
 
   <!-- Defer non-critical JavaScript -->
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js" defer></script>
-  <!-- <script
-    src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"
-    defer
-  ></script> -->
-  <!-- <script
-    src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-    integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-    crossorigin="anonymous"
-    defer
-  ></script> -->
+
   <script
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
     integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
